syntax = "proto3";

package list.v1;

import "google/protobuf/any.proto";
import "rbt/v1alpha1/options.proto";

////////////////////////////////////////////////////////////////////////

service ListMethods {
  rpc Append(AppendRequest) returns (AppendResponse) {
    option (rbt.v1alpha1.method) = {
      writer: {},
    };
  }

  rpc Remove(RemoveRequest) returns (RemoveResponse) {
    option (rbt.v1alpha1.method) = {
      writer: {},
    };
  }

  rpc GetPage(GetPageRequest) returns (GetPageResponse) {
    option (rbt.v1alpha1.method) = {
      reader: {},
    };
  }
}

////////////////////////////////////////////////////////////////////////

message Item {
  oneof value {
    double as_double = 1;
    float as_float = 2;
    int32 as_int32 = 3;
    int64 as_int64 = 4;
    uint32 as_uint32 = 5;
    uint64 as_uint64 = 6;
    sint32 as_sint32 = 7;
    sint64 as_sint64 = 8;
    fixed32 as_fixed32 = 9;
    fixed64 as_fixed64 = 10;
    sfixed32 as_sfixed32 = 11;
    sfixed64 as_sfixed64 = 12;
    bool as_bool = 13;
    string as_string = 14;
    bytes as_bytes = 15;
    google.protobuf.Any as_any = 16;
  }
}

////////////////////////////////////////////////////////////////////////

message List {
  option (rbt.v1alpha1.state) = {
  };
  repeated Item items = 1;
}

////////////////////////////////////////////////////////////////////////

message AppendRequest {
  Item item = 1;
}

message AppendResponse {}

////////////////////////////////////////////////////////////////////////

message RemoveRequest {
  Item item = 1;
}

message RemoveResponse {}

////////////////////////////////////////////////////////////////////////

message GetPageRequest {
  int32 page = 1;
  uint32 items_per_page = 2;
}

message GetPageResponse {
  repeated Item items = 1;
}

////////////////////////////////////////////////////////////////////////